# make_tree

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  main.yml  typecheck.yml
cfetree/: __init__.py  cfetree.py  entrypoint.py
make_tree/: __init__.py  entrypoint.py  make_tree.py
tests/: test_cfetree.py  test_make_tree.py
