[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "make_tree"
description = 'Simple script for drawing phylogenetic trees'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0"
keywords = ["ete4", "tree maker", "pdf"]
authors = [
  { name = "Vitaliy Mysak", email = "vmysak@bccfe.ca" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ete4",
  "PyQt6; sys_platform != 'win32'",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-html",
]
dev = [
  "ruff",
  "mypy==1.9.0",
]

[project.urls]
Documentation = "https://github.com/cfe-lab/make_tree#readme"
Issues = "https://github.com/cfe-lab/make_tree/issues"
Source = "https://github.com/cfe-lab/make_tree"

[project.scripts]
make_tree = "make_tree.entrypoint:main"

[tool.hatch.version]
path = "make_tree/__about__.py"

[tool.hatch.build]
exclude = [
  "tests",
]
skip-excluded-dirs = true
directory = "output"

[tool.hatch.build.targets.wheel]
packages = ["make_tree"]



[tool.pytest.ini_options]
pythonpath = "."
minversion = "6.0"
addopts = "-ra --cov --cov-report xml"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "**/__init__.py",
  "**/__about__.py",
  "**/entrypoint.py",
  "tests/*.py"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pydocstyle]
match = "**/*.py"

[tool.mypy]
files = ["make_tree", "tests"]
ignore_missing_imports = true
strict = true
# Relax specific strict flags:
strict_optional = true
allow_untyped_calls = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["make_tree"]
